# tscnn

./: CMakeLists.txt  example.cpp  main.cpp  strf.h  test.cpp  tscnn.h  tscnn.sln  tscnn.vcxproj  tscnn.vcxproj.filters
example/: example.vcxproj  example.vcxproj.filters
